update with 67 changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -70,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org65ae182">사용법</a></li>
+<li><a href="#org3b3a92b">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +80,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org65ae182" class="outline-2">
-<h2 id="org65ae182">사용법</h2>
-<div class="outline-text-2" id="text-org65ae182">
+<div id="outline-container-org3b3a92b" class="outline-2">
+<h2 id="org3b3a92b">사용법</h2>
+<div class="outline-text-2" id="text-org3b3a92b">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
