--- a/note/dart.html
+++ b/note/dart.html
@@ -70,15 +70,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8ff066a">엔트리 포인트(Entry Point)</a></li>
-<li><a href="#org262a342">문자열 조합(String Interpolation)</a></li>
-<li><a href="#orgadcc51f">함수(Function)</a></li>
-<li><a href="#org8645798">루프(Loop)</a></li>
-<li><a href="#orgf2b2da7">Map과 Filter</a></li>
-<li><a href="#org55ab44f">클래스(Class)</a>
+<li><a href="#org0414595">엔트리 포인트(Entry Point)</a></li>
+<li><a href="#org17a09ec">문자열 조합(String Interpolation)</a></li>
+<li><a href="#org18a8dac">함수(Function)</a></li>
+<li><a href="#org1a3dd7c">루프(Loop)</a></li>
+<li><a href="#org03249bc">Map과 Filter</a></li>
+<li><a href="#orgf700c7a">클래스(Class)</a>
 <ul>
-<li><a href="#orgff7c2ac">기본 형태</a></li>
-<li><a href="#orgd20ac18">Setter 그리고 Getter</a></li>
+<li><a href="#orgf6ea9e1">기본 형태</a></li>
+<li><a href="#org2dff16d">Setter 그리고 Getter</a></li>
 </ul>
 </li>
 </ul>
@@ -106,9 +106,9 @@
 싫어하는 언어이지만 써야 하기 때문에 억지로 남기는 메모가 이어진다.
 </p>
 
-<div id="outline-container-org8ff066a" class="outline-2">
-<h2 id="org8ff066a">엔트리 포인트(Entry Point)</h2>
-<div class="outline-text-2" id="text-org8ff066a">
+<div id="outline-container-org0414595" class="outline-2">
+<h2 id="org0414595">엔트리 포인트(Entry Point)</h2>
+<div class="outline-text-2" id="text-org0414595">
 <div class="org-src-container">
 <pre class="src src-dart"><span style="color: #ECBE7B;">void</span> <span style="color: #c678dd;">main</span>() {
   print(<span style="color: #98be65;">'Hello World!'</span>);
@@ -125,9 +125,9 @@ C와 비슷하지만 print 함수가 자동으로 개행 문자를 붙인다는 
 </p>
 </div>
 </div>
-<div id="outline-container-org262a342" class="outline-2">
-<h2 id="org262a342">문자열 조합(String Interpolation)</h2>
-<div class="outline-text-2" id="text-org262a342">
+<div id="outline-container-org17a09ec" class="outline-2">
+<h2 id="org17a09ec">문자열 조합(String Interpolation)</h2>
+<div class="outline-text-2" id="text-org17a09ec">
 <div class="org-src-container">
 <pre class="src src-dart">print(<span style="color: #98be65;">'foo is </span><span style="color: #dcaeea;">$foo</span><span style="color: #98be65;">'</span>);
 </pre>
@@ -141,9 +141,9 @@ C와 비슷하지만 print 함수가 자동으로 개행 문자를 붙인다는 
 </div>
 </div>
 </div>
-<div id="outline-container-orgadcc51f" class="outline-2">
-<h2 id="orgadcc51f">함수(Function)</h2>
-<div class="outline-text-2" id="text-orgadcc51f">
+<div id="outline-container-org18a8dac" class="outline-2">
+<h2 id="org18a8dac">함수(Function)</h2>
+<div class="outline-text-2" id="text-org18a8dac">
 <p>
 그냥 함수를 정의하는 몇 가지 예를 보자.
 </p>
@@ -183,9 +183,9 @@ named field 형태를 구현하는 방법으로 역시 빌어먹을 <a href="jav
 </p>
 </div>
 </div>
-<div id="outline-container-org8645798" class="outline-2">
-<h2 id="org8645798">루프(Loop)</h2>
-<div class="outline-text-2" id="text-org8645798">
+<div id="outline-container-org1a3dd7c" class="outline-2">
+<h2 id="org1a3dd7c">루프(Loop)</h2>
+<div class="outline-text-2" id="text-org1a3dd7c">
 <p>
 기본적은 for-loop 모양은 C 식과 거의 동일하다.
 </p>
@@ -207,9 +207,9 @@ named field 형태를 구현하는 방법으로 역시 빌어먹을 <a href="jav
 </div>
 </div>
 </div>
-<div id="outline-container-orgf2b2da7" class="outline-2">
-<h2 id="orgf2b2da7">Map과 Filter</h2>
-<div class="outline-text-2" id="text-orgf2b2da7">
+<div id="outline-container-org03249bc" class="outline-2">
+<h2 id="org03249bc">Map과 Filter</h2>
+<div class="outline-text-2" id="text-org03249bc">
 <p>
 Map은 리스트에 그냥 쓰면 된다.
 </p>
@@ -230,13 +230,13 @@ Map은 리스트에 그냥 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org55ab44f" class="outline-2">
-<h2 id="org55ab44f">클래스(Class)</h2>
-<div class="outline-text-2" id="text-org55ab44f">
+<div id="outline-container-orgf700c7a" class="outline-2">
+<h2 id="orgf700c7a">클래스(Class)</h2>
+<div class="outline-text-2" id="text-orgf700c7a">
 </div>
-<div id="outline-container-orgff7c2ac" class="outline-3">
-<h3 id="orgff7c2ac">기본 형태</h3>
-<div class="outline-text-3" id="text-orgff7c2ac">
+<div id="outline-container-orgf6ea9e1" class="outline-3">
+<h3 id="orgf6ea9e1">기본 형태</h3>
+<div class="outline-text-3" id="text-orgf6ea9e1">
 <p>
 기본적인 모양은 이런 식이다.
 </p>
@@ -281,9 +281,9 @@ Map은 리스트에 그냥 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd20ac18" class="outline-3">
-<h3 id="orgd20ac18">Setter 그리고 Getter</h3>
-<div class="outline-text-3" id="text-orgd20ac18">
+<div id="outline-container-org2dff16d" class="outline-3">
+<h3 id="org2dff16d">Setter 그리고 Getter</h3>
+<div class="outline-text-3" id="text-org2dff16d">
 <div class="org-src-container">
 <pre class="src src-dart"><span style="color: #51afef;">class</span> <span style="color: #ECBE7B;">SomeClass</span> <span style="color: #51afef;">extends</span> <span style="color: #ECBE7B;">SomeParentClass</span> {
   <span style="color: #ECBE7B;">int</span> <span style="color: #dcaeea;">age</span> = <span style="color: #da8548; font-weight: bold;">0</span>;
@@ -317,8 +317,8 @@ Map은 리스트에 그냥 쓰면 된다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
