--- a/note/definition.html
+++ b/note/definition.html
@@ -70,10 +70,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org703ead2">대충 사용하는 의미</a></li>
-<li><a href="#org1810a27">구세대 언어의 예</a></li>
-<li><a href="#orge89c122">현대적인 언어의 예</a></li>
-<li><a href="#orgbfa8e7f">결론</a></li>
+<li><a href="#org0524eca">대충 사용하는 의미</a></li>
+<li><a href="#org8f1c531">구세대 언어의 예</a></li>
+<li><a href="#org11bc55a">현대적인 언어의 예</a></li>
+<li><a href="#org6361b48">결론</a></li>
 </ul>
 </div>
 </div>
@@ -82,9 +82,9 @@
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org703ead2" class="outline-2">
-<h2 id="org703ead2">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org703ead2">
+<div id="outline-container-org0524eca" class="outline-2">
+<h2 id="org0524eca">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-org0524eca">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -100,9 +100,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org1810a27" class="outline-2">
-<h2 id="org1810a27">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org1810a27">
+<div id="outline-container-org8f1c531" class="outline-2">
+<h2 id="org8f1c531">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-org8f1c531">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -139,9 +139,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orge89c122" class="outline-2">
-<h2 id="orge89c122">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-orge89c122">
+<div id="outline-container-org11bc55a" class="outline-2">
+<h2 id="org11bc55a">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-org11bc55a">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -172,9 +172,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orgbfa8e7f" class="outline-2">
-<h2 id="orgbfa8e7f">결론</h2>
-<div class="outline-text-2" id="text-orgbfa8e7f">
+<div id="outline-container-org6361b48" class="outline-2">
+<h2 id="org6361b48">결론</h2>
+<div class="outline-text-2" id="text-org6361b48">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
@@ -196,8 +196,8 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
