--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -70,12 +70,12 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1f1df5e">단축키</a>
+<li><a href="#orgf440813">단축키</a>
 <ul>
-<li><a href="#org1ba84bf">프로젝트(Project)</a></li>
-<li><a href="#org2af1b40">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org0703525">타임라인(Timeline)</a></li>
-<li><a href="#org3ed39fa">플레이(Play or Preview)</a></li>
+<li><a href="#orgb285e9e">프로젝트(Project)</a></li>
+<li><a href="#org4a1cd5a">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org9217e10">타임라인(Timeline)</a></li>
+<li><a href="#org040258b">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +87,13 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org1f1df5e" class="outline-2">
-<h2 id="org1f1df5e">단축키</h2>
-<div class="outline-text-2" id="text-org1f1df5e">
+<div id="outline-container-orgf440813" class="outline-2">
+<h2 id="orgf440813">단축키</h2>
+<div class="outline-text-2" id="text-orgf440813">
 </div>
-<div id="outline-container-org1ba84bf" class="outline-3">
-<h3 id="org1ba84bf">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org1ba84bf">
+<div id="outline-container-orgb285e9e" class="outline-3">
+<h3 id="orgb285e9e">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-orgb285e9e">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -102,9 +102,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org2af1b40" class="outline-3">
-<h3 id="org2af1b40">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org2af1b40">
+<div id="outline-container-org4a1cd5a" class="outline-3">
+<h3 id="org4a1cd5a">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org4a1cd5a">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -119,9 +119,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org0703525" class="outline-3">
-<h3 id="org0703525">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org0703525">
+<div id="outline-container-org9217e10" class="outline-3">
+<h3 id="org9217e10">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org9217e10">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -146,9 +146,9 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
 </dl>
 </div>
 </div>
-<div id="outline-container-org3ed39fa" class="outline-3">
-<h3 id="org3ed39fa">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org3ed39fa">
+<div id="outline-container-org040258b" class="outline-3">
+<h3 id="org040258b">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org040258b">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -169,8 +169,8 @@ Final Cut Pro X는 <a href="apple.html">애플</a>에서 개발한 동영상 편
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
