--- a/note/flake8.html
+++ b/note/flake8.html
@@ -70,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6d57e58">설치</a></li>
-<li><a href="#org3b2e957">사용법</a></li>
-<li><a href="#org8150d20">설정 파일</a></li>
-<li><a href="#org6c2be94">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org2bae20d">외부 링크</a></li>
+<li><a href="#org8ecbd47">설치</a></li>
+<li><a href="#org96e5cac">사용법</a></li>
+<li><a href="#orgdd5f1bc">설정 파일</a></li>
+<li><a href="#orgb7cb17a">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org1773187">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,9 +86,9 @@
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org6d57e58" class="outline-2">
-<h2 id="org6d57e58">설치</h2>
-<div class="outline-text-2" id="text-org6d57e58">
+<div id="outline-container-org8ecbd47" class="outline-2">
+<h2 id="org8ecbd47">설치</h2>
+<div class="outline-text-2" id="text-org8ecbd47">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -98,9 +98,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-org3b2e957" class="outline-2">
-<h2 id="org3b2e957">사용법</h2>
-<div class="outline-text-2" id="text-org3b2e957">
+<div id="outline-container-org96e5cac" class="outline-2">
+<h2 id="org96e5cac">사용법</h2>
+<div class="outline-text-2" id="text-org96e5cac">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -120,9 +120,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8150d20" class="outline-2">
-<h2 id="org8150d20">설정 파일</h2>
-<div class="outline-text-2" id="text-org8150d20">
+<div id="outline-container-orgdd5f1bc" class="outline-2">
+<h2 id="orgdd5f1bc">설정 파일</h2>
+<div class="outline-text-2" id="text-orgdd5f1bc">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -154,9 +154,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org6c2be94" class="outline-2">
-<h2 id="org6c2be94">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org6c2be94">
+<div id="outline-container-orgb7cb17a" class="outline-2">
+<h2 id="orgb7cb17a">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-orgb7cb17a">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -189,9 +189,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org2bae20d" class="outline-2">
-<h2 id="org2bae20d">외부 링크</h2>
-<div class="outline-text-2" id="text-org2bae20d">
+<div id="outline-container-org1773187" class="outline-2">
+<h2 id="org1773187">외부 링크</h2>
+<div class="outline-text-2" id="text-org1773187">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
