--- a/note/flutter.html
+++ b/note/flutter.html
@@ -70,10 +70,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeff964f">문제 해결</a>
+<li><a href="#org4000a30">문제 해결</a>
 <ul>
-<li><a href="#org1f7e9de">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orge0f1812">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org344d82f">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgc1c361b">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -89,13 +89,13 @@ Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 iO
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orgeff964f" class="outline-2">
-<h2 id="orgeff964f">문제 해결</h2>
-<div class="outline-text-2" id="text-orgeff964f">
+<div id="outline-container-org4000a30" class="outline-2">
+<h2 id="org4000a30">문제 해결</h2>
+<div class="outline-text-2" id="text-org4000a30">
 </div>
-<div id="outline-container-org1f7e9de" class="outline-3">
-<h3 id="org1f7e9de">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org1f7e9de">
+<div id="outline-container-org344d82f" class="outline-3">
+<h3 id="org344d82f">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org344d82f">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -128,9 +128,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orge0f1812" class="outline-3">
-<h3 id="orge0f1812">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orge0f1812">
+<div id="outline-container-orgc1c361b" class="outline-3">
+<h3 id="orgc1c361b">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgc1c361b">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
