--- a/note/magit.html
+++ b/note/magit.html
@@ -70,16 +70,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeecce04">magit-status</a></li>
-<li><a href="#org04603e7">Stage</a></li>
-<li><a href="#org5640339">Commit</a></li>
-<li><a href="#org42a8616">Log</a></li>
-<li><a href="#org416fe30">Push</a></li>
-<li><a href="#org366a1ef">Pull</a></li>
-<li><a href="#orgd47230d">Branch</a></li>
-<li><a href="#orgcbc3a6f">Reset or Revert</a></li>
-<li><a href="#orgfde8af5">기타</a></li>
-<li><a href="#org2186434">외부 링크</a></li>
+<li><a href="#org1b802f5">magit-status</a></li>
+<li><a href="#org2f0580c">Stage</a></li>
+<li><a href="#org9206913">Commit</a></li>
+<li><a href="#orgc6fb271">Log</a></li>
+<li><a href="#org51bc289">Push</a></li>
+<li><a href="#org93725ad">Pull</a></li>
+<li><a href="#org52d6e12">Branch</a></li>
+<li><a href="#orgc0f969b">Reset or Revert</a></li>
+<li><a href="#orgeaedab1">기타</a></li>
+<li><a href="#org09a4035">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -100,9 +100,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgeecce04" class="outline-2">
-<h2 id="orgeecce04">magit-status</h2>
-<div class="outline-text-2" id="text-orgeecce04">
+<div id="outline-container-org1b802f5" class="outline-2">
+<h2 id="org1b802f5">magit-status</h2>
+<div class="outline-text-2" id="text-org1b802f5">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -124,9 +124,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org04603e7" class="outline-2">
-<h2 id="org04603e7">Stage</h2>
-<div class="outline-text-2" id="text-org04603e7">
+<div id="outline-container-org2f0580c" class="outline-2">
+<h2 id="org2f0580c">Stage</h2>
+<div class="outline-text-2" id="text-org2f0580c">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -139,9 +139,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org5640339" class="outline-2">
-<h2 id="org5640339">Commit</h2>
-<div class="outline-text-2" id="text-org5640339">
+<div id="outline-container-org9206913" class="outline-2">
+<h2 id="org9206913">Commit</h2>
+<div class="outline-text-2" id="text-org9206913">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -157,9 +157,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org42a8616" class="outline-2">
-<h2 id="org42a8616">Log</h2>
-<div class="outline-text-2" id="text-org42a8616">
+<div id="outline-container-orgc6fb271" class="outline-2">
+<h2 id="orgc6fb271">Log</h2>
+<div class="outline-text-2" id="text-orgc6fb271">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -169,25 +169,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org416fe30" class="outline-2">
-<h2 id="org416fe30">Push</h2>
-<div class="outline-text-2" id="text-org416fe30">
+<div id="outline-container-org51bc289" class="outline-2">
+<h2 id="org51bc289">Push</h2>
+<div class="outline-text-2" id="text-org51bc289">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org366a1ef" class="outline-2">
-<h2 id="org366a1ef">Pull</h2>
-<div class="outline-text-2" id="text-org366a1ef">
+<div id="outline-container-org93725ad" class="outline-2">
+<h2 id="org93725ad">Pull</h2>
+<div class="outline-text-2" id="text-org93725ad">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd47230d" class="outline-2">
-<h2 id="orgd47230d">Branch</h2>
-<div class="outline-text-2" id="text-orgd47230d">
+<div id="outline-container-org52d6e12" class="outline-2">
+<h2 id="org52d6e12">Branch</h2>
+<div class="outline-text-2" id="text-org52d6e12">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -195,26 +195,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgcbc3a6f" class="outline-2">
-<h2 id="orgcbc3a6f">Reset or Revert</h2>
-<div class="outline-text-2" id="text-orgcbc3a6f">
+<div id="outline-container-orgc0f969b" class="outline-2">
+<h2 id="orgc0f969b">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orgc0f969b">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfde8af5" class="outline-2">
-<h2 id="orgfde8af5">기타</h2>
-<div class="outline-text-2" id="text-orgfde8af5">
+<div id="outline-container-orgeaedab1" class="outline-2">
+<h2 id="orgeaedab1">기타</h2>
+<div class="outline-text-2" id="text-orgeaedab1">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2186434" class="outline-2">
-<h2 id="org2186434">외부 링크</h2>
-<div class="outline-text-2" id="text-org2186434">
+<div id="outline-container-org09a4035" class="outline-2">
+<h2 id="org09a4035">외부 링크</h2>
+<div class="outline-text-2" id="text-org09a4035">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
