--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -100,8 +100,8 @@ OS X이나 macOS의 전신인 만큼,
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
