--- a/note/pngquant.html
+++ b/note/pngquant.html
@@ -70,9 +70,9 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge8de254">설치</a></li>
-<li><a href="#org10ee46f">사용법</a></li>
-<li><a href="#org6565fe4">외부 링크</a></li>
+<li><a href="#org73042af">설치</a></li>
+<li><a href="#org595ae4e">사용법</a></li>
+<li><a href="#org1ce1de6">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -83,9 +83,9 @@ pngquant는 PNG 이미지 포맷을 압축하는 오픈소스 <a href="cli.html"
 파괴 압축(lossy compression)을 하는 것으로 추정한다.
 </p>
 
-<div id="outline-container-orge8de254" class="outline-2">
-<h2 id="orge8de254">설치</h2>
-<div class="outline-text-2" id="text-orge8de254">
+<div id="outline-container-org73042af" class="outline-2">
+<h2 id="org73042af">설치</h2>
+<div class="outline-text-2" id="text-org73042af">
 <p>
 <a href="macos.html">macOS</a>에서는 <a href="homebrew.html">Homebrew</a>로 쉽게 설치할 수 있다.
 </p>
@@ -98,9 +98,9 @@ pngquant는 PNG 이미지 포맷을 압축하는 오픈소스 <a href="cli.html"
 </p>
 </div>
 </div>
-<div id="outline-container-org10ee46f" class="outline-2">
-<h2 id="org10ee46f">사용법</h2>
-<div class="outline-text-2" id="text-org10ee46f">
+<div id="outline-container-org595ae4e" class="outline-2">
+<h2 id="org595ae4e">사용법</h2>
+<div class="outline-text-2" id="text-org595ae4e">
 <p>
 단순히 이미지 파일을 인자로 넘기면 압축해 준다.
 </p>
@@ -140,9 +140,9 @@ fs8 이라는 이름은 압축 방식과 관련된 이름으로 추측된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6565fe4" class="outline-2">
-<h2 id="org6565fe4">외부 링크</h2>
-<div class="outline-text-2" id="text-org6565fe4">
+<div id="outline-container-org1ce1de6" class="outline-2">
+<h2 id="org1ce1de6">외부 링크</h2>
+<div class="outline-text-2" id="text-org1ce1de6">
 <ul class="org-ul">
 <li><a target="_blank" href="https://pngquant.org/">🌏pngquant 공식 사이트</a></li>
 </ul>
