--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -94,9 +94,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥, 아치에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org7dbbb11" class="outline-2">
-<h2 id="org7dbbb11">외부 링크</h2>
-<div class="outline-text-2" id="text-org7dbbb11">
+<div id="outline-container-org79ba883" class="outline-2">
+<h2 id="org79ba883">외부 링크</h2>
+<div class="outline-text-2" id="text-org79ba883">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
