--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -163,9 +163,9 @@
 </tbody>
 </table>
 
-<div id="outline-container-org0581c1d" class="outline-2">
-<h2 id="org0581c1d">참고</h2>
-<div class="outline-text-2" id="text-org0581c1d">
+<div id="outline-container-orgdbe7bef" class="outline-2">
+<h2 id="orgdbe7bef">참고</h2>
+<div class="outline-text-2" id="text-orgdbe7bef">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
