--- a/note/svg.html
+++ b/note/svg.html
@@ -79,9 +79,9 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-orgd6c4f09" class="outline-2">
-<h2 id="orgd6c4f09"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
-<div class="outline-text-2" id="text-orgd6c4f09">
+<div id="outline-container-org62202fd" class="outline-2">
+<h2 id="org62202fd"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
+<div class="outline-text-2" id="text-org62202fd">
 <p>
 <code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
