--- a/note/gitignore.html
+++ b/note/gitignore.html
@@ -70,20 +70,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org61f8ed0">.gitignore</a></li>
-<li><a href="#org6dabfdf">gitignore.io</a>
+<li><a href="#orgfdcff2e">.gitignore</a></li>
+<li><a href="#org606d109">gitignore.io</a>
 <ul>
-<li><a href="#orgb9d80ad">사용법</a></li>
-<li><a href="#org1a7ddd9">Command Line</a></li>
+<li><a href="#org266885a">사용법</a></li>
+<li><a href="#orgfade105">Command Line</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org61f8ed0" class="outline-2">
-<h2 id="org61f8ed0">.gitignore</h2>
-<div class="outline-text-2" id="text-org61f8ed0">
+<div id="outline-container-orgfdcff2e" class="outline-2">
+<h2 id="orgfdcff2e">.gitignore</h2>
+<div class="outline-text-2" id="text-orgfdcff2e">
 <p>
 <code>.gitignore</code> 파일은 <a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
 주로 프로젝트 루트 디렉터리에 위치하지만 필요하다면 각 하부 디렉터리에도 생성할 수 있다.
@@ -120,9 +120,9 @@ env/
 </div>
 </div>
 </div>
-<div id="outline-container-org6dabfdf" class="outline-2">
-<h2 id="org6dabfdf">gitignore.io</h2>
-<div class="outline-text-2" id="text-org6dabfdf">
+<div id="outline-container-org606d109" class="outline-2">
+<h2 id="org606d109">gitignore.io</h2>
+<div class="outline-text-2" id="text-org606d109">
 <p>
 <a target="_blank" href="https://www.gitignore.io/">🌏gitignore.io</a>라는 사이트는 프로젝트나 언어 등 몇 가지 기준으로
 자주 쓰이는 <code>.gitignore</code> 목록을 생성해 주는 서비스다.
@@ -131,18 +131,18 @@ env/
 gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
 </p>
 </div>
-<div id="outline-container-orgb9d80ad" class="outline-3">
-<h3 id="orgb9d80ad">사용법</h3>
-<div class="outline-text-3" id="text-orgb9d80ad">
+<div id="outline-container-org266885a" class="outline-3">
+<h3 id="org266885a">사용법</h3>
+<div class="outline-text-3" id="text-org266885a">
 <p>
 사용 방법은 사이트 중앙의 텍스트 필드에 언어나 프로젝트 이름을 써 넣고 Create 버튼을 누르면 된다.
 그 후 나오는 내용을 <code>.gitignore</code> 파일에 그대로 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org1a7ddd9" class="outline-3">
-<h3 id="org1a7ddd9">Command Line</h3>
-<div class="outline-text-3" id="text-org1a7ddd9">
+<div id="outline-container-orgfade105" class="outline-3">
+<h3 id="orgfade105">Command Line</h3>
+<div class="outline-text-3" id="text-orgfade105">
 <p>
 일반적인 웹 사이트인 줄 알았는데 약간 특수한 트윅으로 <a href="cli.html">CLI</a> 도구가 제공된다.
 정확히 말해서 <a href="shell.html">셸</a> 함수를 초기화 파일에 쓰는 형태로 설정해서 사용하는 도구다.
