--- a/note/object.html
+++ b/note/object.html
@@ -70,16 +70,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org2716015">사전적 의미</a></li>
-<li><a href="#org92cf86c">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#orgc4586ed">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org1873c74">사전적 의미</a></li>
+<li><a href="#org333881c">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#org3ec452a">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2716015" class="outline-2">
-<h2 id="org2716015">사전적 의미</h2>
-<div class="outline-text-2" id="text-org2716015">
+<div id="outline-container-org1873c74" class="outline-2">
+<h2 id="org1873c74">사전적 의미</h2>
+<div class="outline-text-2" id="text-org1873c74">
 <blockquote>
 <p>
 물건, 물체
@@ -90,9 +90,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org92cf86c" class="outline-2">
-<h2 id="org92cf86c">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org92cf86c">
+<div id="outline-container-org333881c" class="outline-2">
+<h2 id="org333881c">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org333881c">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -103,9 +103,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgc4586ed" class="outline-2">
-<h2 id="orgc4586ed">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-orgc4586ed">
+<div id="outline-container-org3ec452a" class="outline-2">
+<h2 id="org3ec452a">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-org3ec452a">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
@@ -124,8 +124,8 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
