--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -70,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcae7f6d">외부 링크</a></li>
+<li><a href="#org2ca4ba7">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +88,9 @@
 글을 참고하자.
 </p>
 
-<div id="outline-container-orgcae7f6d" class="outline-2">
-<h2 id="orgcae7f6d">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcae7f6d">
+<div id="outline-container-org2ca4ba7" class="outline-2">
+<h2 id="org2ca4ba7">외부 링크</h2>
+<div class="outline-text-2" id="text-org2ca4ba7">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
@@ -107,13 +107,13 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
-2020년 4월 30일 수정</div>
+2020년 5월 3일 수정</div>
 </div>
 </div>
 </div>
