--- a/note/sh.html
+++ b/note/sh.html
@@ -70,27 +70,27 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga562d9d">소개</a></li>
-<li><a href="#org55607d2">스크립팅 노트</a>
+<li><a href="#orgab8a35b">소개</a></li>
+<li><a href="#org47e3172">스크립팅 노트</a>
 <ul>
-<li><a href="#orgb6fd663">실행 가능한 스크립트</a></li>
-<li><a href="#orgd1c5551">if</a></li>
-<li><a href="#org941d37d">루프</a></li>
-<li><a href="#org2e9e3fb">조건식 오퍼레이터</a></li>
-<li><a href="#org4d773cd">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org224e38a">파일 개수</a></li>
-<li><a href="#orgd6ef470">와일드카드 인자 처리</a></li>
-<li><a href="#org05091bd">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org9fdb7cf">에러 메시지 숨기기</a></li>
+<li><a href="#org84f023d">실행 가능한 스크립트</a></li>
+<li><a href="#org5037e35">if</a></li>
+<li><a href="#org0aea08f">루프</a></li>
+<li><a href="#orge400f05">조건식 오퍼레이터</a></li>
+<li><a href="#orgde04e6b">디렉토리 존재 유무 체크</a></li>
+<li><a href="#orgb77a9cd">파일 개수</a></li>
+<li><a href="#orga77ac06">와일드카드 인자 처리</a></li>
+<li><a href="#org7ce9806">에러가 나면 멈추게 하기</a></li>
+<li><a href="#orge67ca8c">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orga562d9d" class="outline-2">
-<h2 id="orga562d9d">소개</h2>
-<div class="outline-text-2" id="text-orga562d9d">
+<div id="outline-container-orgab8a35b" class="outline-2">
+<h2 id="orgab8a35b">소개</h2>
+<div class="outline-text-2" id="text-orgab8a35b">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -99,16 +99,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org55607d2" class="outline-2">
-<h2 id="org55607d2">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org55607d2">
+<div id="outline-container-org47e3172" class="outline-2">
+<h2 id="org47e3172">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org47e3172">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-orgb6fd663" class="outline-3">
-<h3 id="orgb6fd663">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-orgb6fd663">
+<div id="outline-container-org84f023d" class="outline-3">
+<h3 id="org84f023d">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org84f023d">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -169,9 +169,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgd1c5551" class="outline-3">
-<h3 id="orgd1c5551">if</h3>
-<div class="outline-text-3" id="text-orgd1c5551">
+<div id="outline-container-org5037e35" class="outline-3">
+<h3 id="org5037e35">if</h3>
+<div class="outline-text-3" id="text-org5037e35">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -210,9 +210,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org941d37d" class="outline-3">
-<h3 id="org941d37d">루프</h3>
-<div class="outline-text-3" id="text-org941d37d">
+<div id="outline-container-org0aea08f" class="outline-3">
+<h3 id="org0aea08f">루프</h3>
+<div class="outline-text-3" id="text-org0aea08f">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -229,9 +229,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2e9e3fb" class="outline-3">
-<h3 id="org2e9e3fb">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org2e9e3fb">
+<div id="outline-container-orge400f05" class="outline-3">
+<h3 id="orge400f05">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orge400f05">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -246,9 +246,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4d773cd" class="outline-3">
-<h3 id="org4d773cd">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org4d773cd">
+<div id="outline-container-orgde04e6b" class="outline-3">
+<h3 id="orgde04e6b">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-orgde04e6b">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -263,9 +263,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org224e38a" class="outline-3">
-<h3 id="org224e38a">파일 개수</h3>
-<div class="outline-text-3" id="text-org224e38a">
+<div id="outline-container-orgb77a9cd" class="outline-3">
+<h3 id="orgb77a9cd">파일 개수</h3>
+<div class="outline-text-3" id="text-orgb77a9cd">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -289,9 +289,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgd6ef470" class="outline-3">
-<h3 id="orgd6ef470">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orgd6ef470">
+<div id="outline-container-orga77ac06" class="outline-3">
+<h3 id="orga77ac06">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orga77ac06">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -309,9 +309,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org05091bd" class="outline-3">
-<h3 id="org05091bd">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org05091bd">
+<div id="outline-container-org7ce9806" class="outline-3">
+<h3 id="org7ce9806">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org7ce9806">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -321,9 +321,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org9fdb7cf" class="outline-3">
-<h3 id="org9fdb7cf">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org9fdb7cf">
+<div id="outline-container-orge67ca8c" class="outline-3">
+<h3 id="orge67ca8c">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-orge67ca8c">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -345,8 +345,8 @@ than, greater than or equal, less than, less than or equal</li>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
