--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -70,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org36d40b3">외부 링크</a></li>
+<li><a href="#org1b955e6">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org36d40b3" class="outline-2">
-<h2 id="org36d40b3">외부 링크</h2>
-<div class="outline-text-2" id="text-org36d40b3">
+<div id="outline-container-org1b955e6" class="outline-2">
+<h2 id="org1b955e6">외부 링크</h2>
+<div class="outline-text-2" id="text-org1b955e6">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -114,8 +114,8 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
