--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/what-choice-democracy-or-privacy-in-korean.html">한국인은 개인의 자유와 민주주의 중 무엇을 선택할까?</a></h2>
+<div class="article-link-date">
+2020년 5월 6일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/track-phising.html">이건 피싱 메일이다</a></h2>
 <div class="article-link-date">
 2020년 5월 3일 작성</div>
