--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/temp-name.html">임시로 쓰는 이름들</a></h2>
+<div class="article-link-date">
+2020년 5월 6일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 5월 5일 수정</div>
@@ -197,13 +204,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
-<div class="article-link-date">
-2020년 5월 1일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
 <div class="article-link-date">
 2020년 5월 1일 수정</div>
 </div>
