--- a/note/index.html
+++ b/note/index.html
@@ -65,6 +65,13 @@
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/temp-name.html">임시로 쓰는 이름들</a></h2>
+<div class="article-link-date">
+2020년 5월 6일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 5월 5일 수정</div>
